--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/common": "^9.4.3",
+    "@nestjs/core": "^9.4.3",
+    "@nestjs/platform-express": "^9.4.3",
     "@prisma/client": "^5.5.2",
+    "@types/multer": "^1.4.10",
     "child_process": "^1.0.2",
+    "googleapis": "^128.0.0",
+    "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "util": "^0.12.5"
