--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "dev": "nest start --watch",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -20,11 +21,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^9.4.3",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.4.3",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.4.3",
     "@prisma/client": "^5.5.2",
     "@types/multer": "^1.4.10",
+    "argon2": "^0.31.2",
+    "bull": "^4.11.5",
     "child_process": "^1.0.2",
     "googleapis": "^128.0.0",
     "multer": "^1.4.5-lts.1",
@@ -36,6 +43,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bull": "^4.10.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
