--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "argon2": "^0.31.2",
     "bull": "^4.11.5",
     "child_process": "^1.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "googleapis": "^128.0.0",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
