--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,16 +13,14 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  pgadmin:
-    image: dpage/pgadmin4:4.28
-    container_name: my_pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: root
-      PGADMIN_DEFAULT_PASSWORD: amgad123
+  redis:
+    image: redis:latest
+    container_name: redis_container
     ports:
-      - "5050:80"
-    depends_on:
-      - postgres
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
 
 volumes:
+  redis_data:
   postgres_data:
