--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "child_process": "^1.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "colorette": "^2.0.20",
     "express": "^4.18.2",
     "googleapis": "^128.0.0",
     "ioredis": "^5.3.2",
