[Fix] update backend port and add limit to send files to server

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,8 @@
 http {
     upstream api {
-        server api:3000;
+        server api:5000;
     }
+    client_max_body_size 20M;
 
     server {
         listen 80;
