--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
       - redis
     environment:
       - DATABASE_URL=postgresql://my_user:my_password@postgres:5432/my_database?schema=public
-      - REDIS_HOST=localhost
+      - REDIS_HOST=redis
       - REDIS_PORT=6379
       - ACCESS_SECRET=amgadwattariskingalkinoog
       - REFRESH_SECRET=amgadwattariskingalkinoog
@@ -49,7 +49,7 @@ services:
       - GOOGLE_DRIVE_REDIRECT_URL_2=http://localhost
 
     ports:
-      - "3000"
+      - "5000"
   nginx:
     image: nginx:latest
     volumes:
