--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -14,6 +14,6 @@ jobs:
       - uses : actions/checkout@v3
       - name : Build and push the image 
         run: | 
-            docker login --username amgad226 --password ${{secrets.GH_PAT}} ghci.io
+            docker login ghci.io --username Amgad226 --password ${{secrets.GH_PAT}} 
             docker build . --tag ghcr.io/amgad226/source-safe:latest
             docker push ghcr.io/amgad226/source-safe:latest  
