feat : add workflow to build and push the docker image to github registry  V1.0.6

--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -56,6 +56,10 @@ jobs:
           docker compose up -d
           EOF
         shell: bash
+        
+      - name: Remove untagged image 
+        run: | 
+         docker image prune --filter "dangling=true"  -f
 
       - name: Cleanup SSH Key
         run: |
